// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FirstNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="first_name"
      >
        Imię
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="Imię"
        name="first_name"
        placeholder="Imię"
        value="3232"
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<FirstNameField /> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="testId"
  label="Imię"
  name="first_name"
  placeholder="Imię"
  value=""
/>
`;

exports[`<FirstNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="first_name"
      >
        FirstName1*
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="FirstName1"
        name="first_name"
        placeholder="Imię*"
        required=""
        value=""
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<FirstNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="first_name"
      >
        FirstName
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="testId"
        label="FirstName"
        name="first_name"
        placeholder="Imię"
        value=""
      />
    </div>
  </form>
</div>
`;
